--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "preview": "node dist/main.js",
     "normalize": "tsx src/scripts/normalize.ts",
+    "scrape": "tsx src/scripts/scrape/main.ts",
     "db": " json-server output/db.json"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
+    "puppeteer": "^24.3.0",
     "rimraf": "^5.0.10"
   }
 }
